--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#565051</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#ff4081</color>
-    <color name = "darkyellow">#f9a602</color>
+    <color name = "darkyellow">#e2af4b</color>
     <color name ="LimeYellow">#ea7d7a71</color>
     <color name ="Black">#0c0c0c</color>
     <color name ="blackishYellow">#faf6da</color>>
