--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -27,7 +27,8 @@
             android:text="1"
             android:layout_marginTop="12dp"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:layout_marginLeft="10dp" />
 
         <TextView
             android:id="@+id/name"
@@ -40,7 +41,8 @@
             android:text="Driver Name"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_marginLeft="10dp" />
 
         <TextView
             app:layout_constraintTop_toBottomOf="@id/name"
@@ -88,7 +90,8 @@
             android:textSize="15sp"
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/mobile"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
