--- a/app/src/main/res/layout/important_contact_item_card.xml
+++ b/app/src/main/res/layout/important_contact_item_card.xml
@@ -9,30 +9,37 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/contact_name"
             android:layout_width="match_parent"
-            android:text="name"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:text="name"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/contact_number"
-            android:text="name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:textSize="20sp"
             android:layout_below="@+id/contact_name"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
+            android:text="name" />
+
         <Button
+            android:id="@+id/callcontact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/callcontact"
-            android:text="Call"
-            android:layout_below="@+id/contact_number" />
+            android:layout_below="@+id/contact_number"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:text="Call" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
