--- a/app/src/main/res/layout/admin_poll_result.xml
+++ b/app/src/main/res/layout/admin_poll_result.xml
@@ -3,42 +3,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <Button
+        android:id="@+id/show_result"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
 
-        <Button
-            android:id="@+id/show_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="424dp"
-            android:layout_marginEnd="124dp"
-            android:layout_marginLeft="114dp"
-            android:layout_marginRight="124dp"
-            android:layout_marginStart="114dp"
-            android:layout_marginTop="39dp"
-            android:text="Show Result"
-            android:textSize="18sp"
-            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/poll_result"
-            android:layout_width="291dp"
-            android:layout_height="306dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="155dp"
-            android:textSize="18sp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:gravity="center_horizontal"
+        android:text="Show Result"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/show_result">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/poll_result"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="0dp"
+                android:layout_marginStart="0dp"
+
+                android:textSize="18sp" />
+        </RelativeLayout>
 
 
     </ScrollView>
+
 </RelativeLayout>
